--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 	<h1>Amy Bradley Contact Infos</h1>
 	<p>Amy Bradley</p>
 	<p>Hamburg, Germany</p>
-	<p><a href="mailto:aimesrose@gmail.com">aimesrose(at)gmail.com</a></p>
+	<p>name(at)gmail.com</a></p>
 	<br>
 <hr>
 	<br>
